namespace University_Self_Service_System___Backend.DTOs.ProfessorDTOs
{
    public class CreateProfessorDto
    {
        public string Name { get; set; }
        public string Email { get; set; }
        public string Department { get; set; }
    }
}